fix z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@
   position: absolute;
   top: 12%;
   left: 22%;
-  z-index: 1;
+  z-index: 10;
 }
 
 .bikinibottom {
@@ -95,7 +95,7 @@
   bottom: -40%;
   right: -3.5%;
   transform: scale(0.5);
-  z-index: 4;
+  z-index: 15;
 }
 
 .hairstyle {
